[package]
name = "jwalk"
version = "0.8.3"
authors = ["Jesse Grosjean <jesse@hogbaysoftware.com>", "Martin Bammer <mrbm74@gmail.com>"]
description = "Filesystem walk performed in parallel with streamed and sorted results."
documentation = "https://docs.rs/jwalk/"
homepage = "https://github.com/brmmm3/jwalk"
repository = "https://github.com/brmmm3/jwalk"
readme = "README.md"
keywords = ["directory", "recursive", "walk", "iterator", "parallel"]
categories = ["filesystem", "concurrency"]
license = "MIT"
edition = "2021"

[badges]
travis-ci = { repository = "brmmm3/jwalk" }

[dependencies]
rayon = "1.6"
crossbeam = "0.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["std", "winioctl", "ioapiset"] }

[target.'cfg(unix)'.dependencies]
libc =  "0.2"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
fs_extra = "1.3"
walkdir = "2.3"
ignore = "0.4"
tempfile = "3.3"
num_cpus = "1.15"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"

[[bench]]
name = "walk_benchmark"
harness = false
