[package]
name = "jwalk-meta"
version = "0.9.4"
authors = ["Jesse Grosjean <jesse@hogbaysoftware.com>", "Sebastian Thiel <byronimo@gmail.com>", "Martin Bammer <mrbm74@gmail.com>"]
description = "Filesystem walk performed in parallel with streamed and sorted results."
documentation = "https://docs.rs/jwalk-meta/"
homepage = "https://github.com/brmmm3/jwalk-meta"
repository = "https://github.com/brmmm3/jwalk-meta"
readme = "README.md"
keywords = ["directory", "recursive", "walk", "iterator", "parallel"]
categories = ["filesystem", "concurrency"]
license = "MIT"
edition = "2021"

[badges]
travis-ci = { repository = "brmmm3/jwalk-meta" }

[dependencies]
rayon = "1.10"
crossbeam = "0.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["std", "winioctl", "ioapiset", "fileapi"] }

[target.'cfg(unix)'.dependencies]
libc =  "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
fs_extra = "1.3"
walkdir = "2.5"
ignore = "0.4"
tempfile = "3.10"
num_cpus = "1.16"
lazy_static = "1.4"
reqwest = { version = "0.12", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"

[[bench]]
name = "walk_benchmark"
harness = false
